--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -203,6 +203,14 @@ target_include_directories( test_partial_rmsd PRIVATE ${purelapack_DIR}/include 
 target_link_libraries( test_partial_rmsd PRIVATE purelapack )
 add_test( NAME test_partial_rmsd COMMAND test_partial_rmsd )
 
+add_executable( test_tree_ )
+target_include_directories( test_tree_ PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_tree_ PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree_.f90
+                                   test_tree_.f90 )
+target_link_libraries( test_tree_ PRIVATE unittest )
+add_test( NAME test_tree_ COMMAND test_tree_ )
+
 add_executable( test_tree )
 target_include_directories( test_tree PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
