--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,4 @@
 find_package( BLAS REQUIRED )
-find_package( purelapack REQUIRED )
 
 add_compile_options(
   $<$<COMPILE_LANG_AND_ID:C,GNU>:-O2>
@@ -46,18 +45,16 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
 
 endif()
 
-add_subdirectory( molutil )
+#add_subdirectory( molutil )
 
 add_library( symRMSD )
-target_include_directories( symRMSD PRIVATE ${purelapack_DIR}/mod_files )
-target_include_directories( symRMSD PRIVATE ${purelapack_DIR}/include )
+target_include_directories( symRMSD PRIVATE include )
 
 list( APPEND f90_src mod_params.f90 )
 list( APPEND f90_src mod_optarg.f90 )
 list( APPEND f90_src mod_permutation.f90 )
 list( APPEND f90_src mod_group_permutation.f90 )
 list( APPEND f90_src mod_molecular_rotation.f90 )
-list( APPEND f90_src mod_molecular_permutation.f90 )
 list( APPEND f90_src mod_rmsd.f90 )
 list( APPEND f90_src mod_rmsd_brute.f90 )
 list( APPEND f90_src mod_det.f90 )
@@ -67,13 +64,11 @@ list( APPEND f90_src mod_mol_block.f90 )
 list( APPEND f90_src mod_Hungarian.f90 )
 list( APPEND f90_src mod_d_matrix.f90 )
 list( APPEND f90_src mod_tree.f90 )
+list( APPEND f90_src mod_branch_and_prune.f90 )
 #list( APPEND f90_src mod_symRMSD.f90 )
 
 target_sources( symRMSD PRIVATE ${f90_src} )
-target_link_libraries( symRMSD PRIVATE molutil )
 target_link_libraries( symRMSD PRIVATE blas )
-target_link_libraries( symRMSD PRIVATE purelapack )
-#target_link_libraries ( symRMSD jsonfortran::jsonfortran-static )
 
 if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   add_subdirectory( test )
