--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package( unittest REQUIRED )
+find_package( purelapack REQUIRED )
 
 add_executable( test_optarg )
 target_include_directories( test_optarg PRIVATE ${unittest_DIR}/mod_files )
@@ -31,31 +32,19 @@ target_sources( test_det PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                  test_det.f90 )
 target_include_directories( test_det PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
 target_link_libraries( test_det PRIVATE unittest )
-target_link_libraries( test_det PRIVATE blas )
+target_link_libraries( test_det PRIVATE purelapack )
 add_test( NAME test_det COMMAND test_det )
-
-add_executable( test_svd )
-target_include_directories( test_svd PRIVATE ${unittest_DIR}/mod_files )
-target_sources( test_svd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
-                                 ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
-                                 ${CMAKE_CURRENT_SOURCE_DIR}/../mod_svd.f90
-                                 test_svd.f90 )
-target_include_directories( test_svd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
-target_link_libraries( test_svd PRIVATE unittest )
-target_link_libraries( test_svd PRIVATE blas )
-add_test( NAME test_svd COMMAND test_svd )
 
 add_executable( test_Kabsch )
 target_include_directories( test_Kabsch PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_Kabsch PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-                                    ${CMAKE_CURRENT_SOURCE_DIR}/../mod_svd.f90
                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Kabsch.f90
                                     test_Kabsch.f90 )
 target_include_directories( test_Kabsch PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
 target_link_libraries( test_Kabsch PRIVATE unittest )
-target_link_libraries( test_Kabsch PRIVATE blas )
+target_link_libraries( test_Kabsch PRIVATE purelapack )
 add_test( NAME test_Kabsch COMMAND test_Kabsch )
 
 add_executable( test_d_matrix )
@@ -63,7 +52,6 @@ target_include_directories( test_d_matrix PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_d_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_svd.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Kabsch.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_molecular_rotation.f90
@@ -73,7 +61,7 @@ target_sources( test_d_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.
                                       test_d_matrix.f90 )
 target_include_directories( test_d_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
 target_link_libraries( test_d_matrix PRIVATE unittest )
-target_link_libraries( test_d_matrix PRIVATE blas )
+target_link_libraries( test_d_matrix PRIVATE purelapack )
 add_test( NAME test_d_matrix COMMAND test_d_matrix )
 
 add_executable( test_tree )
@@ -88,9 +76,7 @@ add_executable( test_branch_and_prune )
 target_include_directories( test_branch_and_prune PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_branch_and_prune PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_permutation.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_svd.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Kabsch.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_molecular_rotation.f90
@@ -102,5 +88,5 @@ target_sources( test_branch_and_prune PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod
                                   test_branch_and_prune.f90 )
 target_include_directories( test_branch_and_prune PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
 target_link_libraries( test_branch_and_prune PRIVATE unittest )
-target_link_libraries( test_branch_and_prune PRIVATE blas )
+target_link_libraries( test_branch_and_prune PRIVATE purelapack )
 add_test( NAME test_branch_and_prune COMMAND test_branch_and_prune )
