[update] mod_Kabsch.f90 -> mod_estimate_rotation_matrix.f90

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,7 @@ list( APPEND f90_src mod_optarg.f90 )
 list( APPEND f90_src mod_group_permutation.f90 )
 list( APPEND f90_src mod_molecular_rotation.f90 )
 list( APPEND f90_src mod_det.f90 )
-list( APPEND f90_src mod_Kabsch.f90 )
+list( APPEND f90_src mod_estimate_rotation_matrix.f90 )
 list( APPEND f90_src mod_mol_block.f90 )
 list( APPEND f90_src mod_Hungarian.f90 )
 list( APPEND f90_src mod_d_matrix.f90 )
