[update] mod_molecular_rotation.f90 -> mod_mol_symmetry.f90

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -54,7 +54,7 @@ target_sources( test_d_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_estimate_rotation_matrix.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
-                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_molecular_rotation.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_symmetry.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_d_matrix.f90
@@ -79,7 +79,7 @@ target_sources( test_branch_and_prune PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_estimate_rotation_matrix.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_molecular_rotation.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_symmetry.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_d_matrix.f90
