--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,7 +53,7 @@ target_include_directories( symRMSD PRIVATE include )
 list( APPEND f90_src mod_params.f90 )
 list( APPEND f90_src mod_optarg.f90 )
 list( APPEND f90_src mod_group_permutation.f90 )
-list( APPEND f90_src mod_molecular_rotation.f90 )
+list( APPEND f90_src mod_mol_symmetry.f90 )
 list( APPEND f90_src mod_det.f90 )
 list( APPEND f90_src mod_estimate_rotation_matrix.f90 )
 list( APPEND f90_src mod_mol_block.f90 )
