[add] python interfaces

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,23 @@
 find_package( BLAS REQUIRED )
 
+# Grab the variables from a local Python installation
+# NumPy headers
+execute_process(
+  COMMAND "${PYTHON_EXECUTABLE}"
+    -c "import numpy; print(numpy.get_include())"
+  OUTPUT_VARIABLE NumPy_INCLUDE_DIRS
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
+# F2PY headers
+execute_process(
+  COMMAND "${PYTHON_EXECUTABLE}"
+  -c "import numpy.f2py; print(numpy.f2py.get_include())"
+  OUTPUT_VARIABLE F2PY_INCLUDE_DIR
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
+
+include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
+
 add_compile_options(
   $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-O2>
   $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-std=f2008>
@@ -30,3 +48,4 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
 endif()
 
 add_subdirectory( symRMSD )
+
