--- a/src/symRMSD/CMakeLists.txt
+++ b/src/symRMSD/CMakeLists.txt
@@ -12,6 +12,7 @@ list( APPEND f90_src mod_d_matrix.f90 )
 list( APPEND f90_src mod_tree.f90 )
 list( APPEND f90_src mod_branch_and_prune.f90 )
 list( APPEND f90_src mod_symRMSD.f90 )
+list( APPEND f90_src python_driver.f90 )
 
 target_sources( symRMSD PRIVATE ${f90_src} )
 target_link_libraries( symRMSD PRIVATE blas )
@@ -20,3 +21,4 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   add_subdirectory( test )
 endif()
 
+add_subdirectory( python_interface )
