--- a/src/symRMSD/test/CMakeLists.txt
+++ b/src/symRMSD/test/CMakeLists.txt
@@ -98,3 +98,23 @@ target_include_directories( test_symRMSD PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../
 target_link_libraries( test_symRMSD PRIVATE unittest )
 target_link_libraries( test_symRMSD PRIVATE purelapack )
 add_test( NAME test_symRMSD COMMAND test_symRMSD )
+
+add_executable( test_driver )
+target_include_directories( test_driver PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_estimate_rotation_matrix.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_symmetry.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mol_block.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Hungarian.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_d_matrix.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_branch_and_prune.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../mod_symRMSD.f90
+                                     ${CMAKE_CURRENT_SOURCE_DIR}/../python_driver.f90
+                                     test_driver.f90 )
+target_include_directories( test_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include )
+target_link_libraries( test_driver PRIVATE unittest )
+target_link_libraries( test_driver PRIVATE purelapack )
+add_test( NAME test_driver COMMAND test_driver )
