--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,8 @@
-find_package( BLAS REQUIRED )
+find_package(BLAS REQUIRED)
 find_package(OpenMP REQUIRED)
-if(OpenMP_FOUND)
-  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${OpenMP_Fortran_FLAGS}")
-endif()
 
 add_compile_options(
+  $<$<COMPILE_LANGUAGE:Fortran>:${OpenMP_Fortran_FLAGS}>
   $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-O2>
   $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-std=f2008>
   $<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fimplicit-none>
