[update] python_driver.f90

--- a/src/symRMSD/CMakeLists.txt
+++ b/src/symRMSD/CMakeLists.txt
@@ -11,14 +11,14 @@ list( APPEND f90_src mod_d_matrix.f90 )
 list( APPEND f90_src mod_tree.f90 )
 list( APPEND f90_src mod_branch_and_prune.f90 )
 list( APPEND f90_src mod_symRMSD.f90 )
-list( APPEND f90_src python_driver.f90 )
+#list( APPEND f90_src python_driver.f90 )
 
 target_sources( symRMSD PRIVATE ${f90_src} )
 target_include_directories( symRMSD PRIVATE include )
-target_include_directories( symRMSD PRIVATE ${OpenMP_Fortran_INCLUDE_DIRS} )
+#target_include_directories( symRMSD PRIVATE ${OpenMP_Fortran_INCLUDE_DIRS} )
 
 target_link_libraries( symRMSD PRIVATE blas )
-target_link_libraries( symRMSD PRIVATE OpenMP )
+#target_link_libraries( symRMSD PRIVATE OpenMP )
 
 if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   add_subdirectory( test )
